# app/Http/Requests/StoreWebhookRequest.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreWebhookRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'url' => ['required', 'url'],
+            'secret' => ['required', 'string', 'max:255'],
+            'enabled' => ['boolean'],
+        ];
+    }
+}
